--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,8 +1,27 @@
-h1 {
-	font-size: 30pt;
-}
-
 #articlesTable th,
 #articlesTable td {
 	padding: 5px 10px;
+}
+
+.bs-callout {
+	margin: 20px 0;
+	padding: 20px;
+	border-left: 3px solid #eee;
+}
+
+.bs-callout-success {
+	background-color: #dff0d8;
+	border-color: #5cb85c;
+}
+
+.bs-callout-success h4 {
+  color: #5cb85c;
+}
+.bs-callout h4 {
+  margin-top: 0;
+  margin-bottom: 5px;
+}
+
+.bs-callout p:last-child {
+  margin-bottom: 0;
 }
