Small bit of header styling etc

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,5 @@
 .top {
-	height: 400px;
+	height: 350px;
 	background: url("../images/bg-forest.jpg") bottom center no-repeat;
 	-webkit-background-size: cover;
        -moz-background-size: cover;
@@ -14,10 +14,7 @@
 .top .page-header h1 {
 	font-size: 60pt;
 	color: white;
-}
-
-.top .page-header small {
-	color: rgb(255, 183, 149);
+	text-shadow: 0 -1px 3px rgba(0,0,0,0.8);
 }
 
 #articlesTable th,
