--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,5 @@
 .top {
-	height: 350px;
+	height: 300px;
 	background: url("../images/bg-forest.jpg") bottom center no-repeat;
 	-webkit-background-size: cover;
        -moz-background-size: cover;
@@ -8,7 +8,7 @@
 }
 
 .top .page-header {
-	padding-top: 100px;
+	padding-top: 80px;
 }
 
 .top .page-header h1 {
@@ -43,4 +43,9 @@
 
 .bs-callout p:last-child {
   margin-bottom: 0;
+}
+
+.powered {
+	color: #999;
+	font-size: 9pt;
 }
